# 571_W26

./: .gitignore  README.md
2026-01-02/: temp.cpp
2026-01-02/CallbackProgressBar/: CMakeLists.txt  README.txt  callbackprogbar.cpp  sgl.cpp  sgl.h
2026-01-02/InitializationTest/: inittest.cpp
2026-01-13/InitializationTest/: CMakeLists.txt  inittest.cpp
2026-01-20/C_Sequence/: CMakeLists.txt  main.c  sequence.c  sequence.h
2026-01-20/Cpp_Sequence/: CMakeLists.txt  main.cpp  sequence.cpp  sequence.h
